--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.2",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0",
+    "react-github-calendar": "^2.0.2",
+    "react-icons": "^4.2.0",
+    "react-parallax-tilt": "^1.5.50",
+    "react-particles-js": "^3.5.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
-    "styled-components": "^5.3.1",
+    "tsparticles": "^1.32.0",
+    "typewriter-effect": "^2.18.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
